--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@getalby/lightning-tools-mcp-server",
   "description": "MCP server for accessing useful bitcoin lightning tools",
   "repository": "https://github.com/getAlby/lightning-tools-mcp-server.git",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "main": "build/index.js",
   "bin": {
@@ -28,12 +28,15 @@
   "author": "Alby contributors",
   "license": "MIT",
   "dependencies": {
-    "@getalby/lightning-tools": "^5.1.2",
-    "@modelcontextprotocol/sdk": "^1.7.0",
+    "@getalby/lightning-tools": "^5.2.0",
+    "@getalby/sdk": "^5.1.0",
+    "@modelcontextprotocol/sdk": "^1.12.0",
     "@types/node": "^20.11.5",
     "dotenv": "^16.4.7",
     "typescript": "^5.3.3",
     "websocket-polyfill": "0.0.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@webbtc/webln-types": "^3.0.0"
+  }
 }
